--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -583,8 +583,7 @@ backup:
   # Schedule to run jobs. Must be in cron time format
   # Ref: https://crontab.guru/
   schedule: "0 2 * * *"
-  labels: {}
-  annotations: {}
+  annotations:
     # Example for authorization to AWS S3 using kube2iam
     # Can also be done using environment variables
     iam.amazonaws.com/role: "jenkins"
@@ -592,7 +591,7 @@ backup:
     repository: "maorfr/kube-tasks"
     tag: "0.2.0"
   # Additional arguments for kube-tasks
-  # Ref: https://github.com/maorfr/kube-tasks#simple-backup
+  # Ref: https://github.com/nuvo/kube-tasks#simple-backup
   extraArgs: []
   # Add existingSecret for AWS credentials
   existingSecret: {}
@@ -603,13 +602,10 @@ backup:
   ## Use this key for AWS secret access key
      # awssecretkey: jenkins_aws_secret_key
   # Add additional environment variables
-   # jenkinsgcp:
-  ## Use this key for GCP credentials
-     # gcpcredentials: credentials.json
-  env: []
+  env:
   # Example environment variable required for AWS credentials chain
-   - name: "AWS_REGION"
-     value: "us-east-1"
+  - name: "AWS_REGION"
+    value: "us-east-1"
   resources:
     requests:
       memory: 1Gi
@@ -618,8 +614,8 @@ backup:
       memory: 1Gi
       cpu: 1
   # Destination to store the backup artifacts
-  # Supported cloud storage services: AWS S3, Minio S3, Azure Blob Storage, Google Cloud Storage
+  # Supported cloud storage services: AWS S3, Minio S3, Azure Blob Storage
   # Additional support can added. Visit this repository for details
-  # Ref: https://github.com/maorfr/skbn
-  destination: "s3://jenkins-data/backup"
+  # Ref: https://github.com/nuvo/skbn
+  destination: "s3://nuvo-jenkins-data/backup"
 checkDeprecation: true
