--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -172,26 +172,20 @@ master:
     - google-source-plugin:latest
     - google-kubernetes-engine:latest
     - google-storage-plugin:latest
-    - git:4.2.0
     - workflow-job:2.35
     - workflow-aggregator:2.6
     - active-directory:2.16
     - matrix-auth:2.5
     - basic-branch-build-strategies:1.3.2
-    - ace-editor:1.1
-    - analysis-core:1.96
-    - analysis-model-api:7.0.1
     - ansicolor:0.6.2
     - ant:1.10
-    - antisamy-markup-formatter:1.6
     - apache-httpcomponents-client-4-api:4.5.10-2.0
     - audit-trail:2.5
     - authentication-tokens:1.3
     - authorize-project:1.3.0
     - aws-credentials:1.28
     - aws-java-sdk:1.11.650
-    - bitbucket:1.1.11
-    - bitbucket-build-status-notifier:1.4.1
+    - bitbucket-build-status-notifier:latest
     - blueocean:1.19.0
     - bouncycastle-api:2.17
     - branch-api:2.5.4
@@ -216,8 +210,6 @@ master:
     - favorite:2.3.2
     - fortify-on-demand-uploader:4.0.1
     - gatling:1.2.6
-    - git:4.0.0-rc
-    - git-client:3.0.0-rc
     - google-chat-notification:1.4
     - google-container-registry-auth:0.3
     - gradle:1.34
