--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -174,91 +174,8 @@ master:
     - google-storage-plugin:latest
     - workflow-job:2.35
     - workflow-aggregator:2.6
-    - active-directory:2.16
-    - matrix-auth:2.5
-    - basic-branch-build-strategies:1.3.2
-    - ansicolor:0.6.2
-    - ant:1.10
-    - apache-httpcomponents-client-4-api:4.5.10-2.0
-    - audit-trail:2.5
-    - authentication-tokens:1.3
-    - authorize-project:1.3.0
-    - aws-credentials:1.28
-    - aws-java-sdk:1.11.650
-    - bitbucket-build-status-notifier:latest
-    - blueocean:1.19.0
-    - bouncycastle-api:2.17
-    - branch-api:2.5.4
-    - build-history-metrics-plugin:1.2
-    - build-monitor-plugin:1.12+build.201809061734
-    - build-pipeline-plugin:1.5.8
-    - checkstyle:4.0.0
-    - cloudbees-bitbucket-branch-source:2.5.0
-    - command-launcher:1.3
-    - conditional-buildstep:1.3.6
-    - config-file-provider:3.6.2
-    - confluence-publisher:2.0.3
-    - credentials:2.3.0
-    - cucumber-reports:4.11.0
-    - CustomHistory:1.6
-    - dependency-check-jenkins-plugin:5.0.2
-    - dependency-track:2.1.0
-    - docker-build-step:2.4
-    - email-ext:2.68
-    - embeddable-build-status:2.0.2
-    - external-monitor-job:1.7
-    - favorite:2.3.2
-    - fortify-on-demand-uploader:4.0.1
-    - gatling:1.2.6
-    - google-chat-notification:1.4
-    - google-container-registry-auth:0.3
-    - gradle:1.34
-    - handlebars:1.1.1
-    - hipchat:2.2.1
-    - http_request:1.8.23
-    - jacoco:3.0.4
-    - jira:3.0.10
-    - job-import-plugin:3.3
-    - jobConfigHistory:2.24
-    - jsoup:1.10.3
-    - ldap:1.20
-    - lockable-resources:2.6
-    - mailer:1.29
-    - mapdb-api:1.0.9.0
-    - mercurial:2.8
-    - momentjs:1.1.1
-    - multiple-scms:0.6
-    - artifactory:latest
-    - oauth-credentials:0.3
-    - pam-auth:1.6
-    - parameterized-trigger:2.35.2
-    - pipeline-aggregator-view:1.8
-    - pipeline-aws:1.38
-    - pipeline-utility-steps:2.3.1
-    - publish-over:0.22
-    - publish-over-ssh:1.20.1
-    - purge-job-history:1.3
-    - rebuild:1.31
-    - role-strategy:2.15
-    - run-condition:1.2
-    - schedule-build:0.5.1
-    - scm-api:2.6.3
-    - scm-sync-configuration:0.0.10
-    - script-security:1.66
-    - secondary-timestamper-plugin:1.1
-    - sonar:2.10
-    - ssh-agent:1.17
-    - ssh-slaves:1.31.0
-    - stashNotifier:1.20
-    - statusmonitor:1.3
-    - structs:1.20
-    - systemloadaverage-monitor:1.2
-    - trilead-api:1.0.5
-    - warnings:5.0.1
-    - warnings-ng:7.1.0
-    - websocket:1.0.6
-    - windows-slaves:1.5
-    - configuration-as-code:1.32
+    - bitbucket:latest
+
 
   # Enable to always override the installed plugins with the values of 'master.installPlugins' on upgrade or redeployment.
   # overwritePlugins: true
