--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -7,20 +7,29 @@
 # See templates/_helpers.tpl
 # nameOverride:
 # fullnameOverride:
-namespaceOverride: jenkins
+# namespaceOverride:
 
 # For FQDN resolving of the master service. Change this value to match your existing configuration.
 # ref: https://github.com/kubernetes/dns/blob/master/docs/specification.md
 clusterZone: "cluster.local"
 
+
 master:
+  # Should be specified in the customer-specifc.yaml
+  # bitbucketSshPrivateKey: ""
+  # bitbucketSshPublicKey: ""
+  # bitbucketSshConfig: ""
+
   # Used for label app.kubernetes.io/component
   componentName: "jenkins-master"
+  # Using default cicd-jenkins image from NPE.
   image: "jenkins/jenkins"
-  tag: "lts"
+  # Latest tag of Jenkins
+  tag: 2.190.2
   imagePullPolicy: "Always"
-  imagePullSecretName:
+  imagePullSecretName: "regcred"
   # Optionally configure lifetime for master-container
+
   lifecycle:
   #  postStart:
   #    exec:
@@ -28,33 +37,27 @@ master:
   #      - "uname"
   #      - "-a"
   numExecutors: 1
-  customJenkinsLabels: []
   # configAutoReload requires UseSecurity is set to true:
   useSecurity: true
-
-  # enables configuration done directly via XML files
-  # People who want to configure Jenkins via https://github.com/jenkinsci/configuration-as-code-plugin only can set it to false
-  enableXmlConfig: true
   # Allows to configure different SecurityRealm using Jenkins XML
   securityRealm: |-
-    <securityRealm class="hudson.security.LegacySecurityRealm"/>
+
   # Allows to configure different AuthorizationStrategy using Jenkins XML
   authorizationStrategy: |-
-     <authorizationStrategy class="hudson.security.FullControlOnceLoggedInAuthorizationStrategy">
-       <denyAnonymousReadAccess>true</denyAnonymousReadAccess>
-     </authorizationStrategy>
+
   hostNetworking: false
   # When enabling LDAP or another non-Jenkins identity source, the built-in admin account will no longer exist.
-  # If you disable the non-Jenkins identity store and instead use the Jenkins internal one,
+  # Since the AdminUser is used by configAutoReload, in order to use configAutoReload you must change the
+  # .master.adminUser to a valid username on your LDAP (or other) server.  This user does not need
+  # to have administrator rights in Jenkins (the default Overall:Read is sufficient) nor will it be granted any
+  # additional rights.  Failure to do this will cause the sidecar container to fail to authenticate via SSH and enter
+  # a restart loop.  Likewise if you disable the non-Jenkins identity store and instead use the Jenkins internal one,
   # you should revert master.adminUser to your preferred admin user:
   adminUser: "admin"
   # adminPassword: <defaults to random>
-  # This values should not be changed unless you use your custom image of jenkins or any devired from. If you want to use
-  # Cloudbees Jenkins Distribution docker, you should set jenkinsHome: "/var/cloudbees-jenkins-distribution"
-  jenkinsHome: "/var/jenkins_home"
-  # This values should not be changed unless you use your custom image of jenkins or any devired from. If you want to use
-  # Cloudbees Jenkins Distribution docker, you should set jenkinsRef: "/usr/share/cloudbees-jenkins-distribution/ref"
-  jenkinsRef: "/usr/share/jenkins/ref"
+  # adminSshKey: <defaults to auto-generated>
+  # If CasC auto-reload is enabled, an SSH (RSA) keypair is needed.  Can either provide your own, or leave unconfigured to allow a random key to be auto-generated.
+  # If you supply your own, it is recommended that the values file that contains your key not be committed to source control in an unencrypted format
   rollingUpdate: {}
   # Ignored if Persistence is enabled
   # maxSurge: 1
@@ -62,10 +65,10 @@ master:
   resources:
     requests:
       cpu: "50m"
-      memory: "1024Mi"
+      memory: "256Mi"
     limits:
-      cpu: "1"
-      memory: "3500Mi"
+      cpu: "2000m"
+      memory: "4096Mi"
   # Environment variables that get added to the init container (useful for e.g. http_proxy)
   initContainerEnv: []
   #   - name: http_proxy
@@ -74,7 +77,7 @@ master:
   #   - name: http_proxy
   #     value: "http://192.168.64.1:3128"
   # Set min/max heap here if needed with:
-  javaOpts: "-Xms512m -Xmx512m"
+  # javaOpts: "-Xms512m -Xmx512m"
   # jenkinsOpts: ""
   # jenkinsUrl: ""
   # If you set this prefix and use ingress controller then you might want to set the ingress path below
@@ -85,7 +88,7 @@ master:
   # When setting runAsUser to a different value than 0 also set fsGroup to the same value:
   runAsUser: 1000
   fsGroup: 1000
-  servicePort: 8080
+  servicePort: 80
   targetPort: 8080
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
@@ -115,6 +118,7 @@ master:
   healthProbeLivenessInitialDelay: 90
   healthProbeReadinessInitialDelay: 60
   slaveListenerPort: 50000
+  slaveListenerPortExpose: 80
   slaveHostPort:
   disabledAgentProtocols:
     - JNLP-connect
@@ -124,30 +128,27 @@ master:
       enabled: true
       proxyCompatability: true
   cli: false
-  # Kubernetes service type for the JNLP agent service
-  # slaveListenerServiceType is the Kubernetes Service type for the JNLP agent service,
+  # Kubernetes service type for the JNLP slave service
+  # slaveListenerServiceType is the Kubernetes Service type for the JNLP slave service,
   # either 'LoadBalancer', 'NodePort', or 'ClusterIP'
   # Note if you set this to 'LoadBalancer', you *must* define annotations to secure it. By default
   # this will be an external load balancer and allowing inbound 0.0.0.0/0, a HUGE
   # security risk:  https://github.com/kubernetes/charts/issues/1341
-#  slaveListenerServiceType: "LoadBalancer"
-  # Optionally assign an IP to the LoadBalancer slaveListenerService LoadBalancer
-  # GKE users: only regional static IPs will work for Service Load balancer.
-  # slaveListenerLoadBalancerIP: 1.2.3.4
+  slaveListenerServiceType: "LoadBalancer"
   slaveListenerServiceAnnotations:
     cloud.google.com/load-balancer-type: Internal
-  slaveKubernetesNamespace: jenkins
+  slaveKubernetesNamespace:
 
-  # Example of 'LoadBalancer' type of agent listener with annotations securing it
-#  slaveListenerServiceType: LoadBalancer
-#  slaveListenerServiceAnnotations:
-#   service.beta.kubernetes.io/aws-load-balancer-internal: "True"
-#   service.beta.kubernetes.io/load-balancer-source-ranges: "172.0.0.0/8, 10.0.0.0/8"
+  # Example of 'LoadBalancer' type of slave listener with annotations securing it
+  # slaveListenerServiceType: LoadBalancer
+  # slaveListenerServiceAnnotations:
+  #   service.beta.kubernetes.io/aws-load-balancer-internal: "True"
+  #   service.beta.kubernetes.io/load-balancer-source-ranges: "172.0.0.0/8, 10.0.0.0/8"
 
   # LoadBalancerSourcesRange is a list of allowed CIDR values, which are combined with ServicePort to
   # set allowed inbound rules on the security group assigned to the master load balancer
   loadBalancerSourceRanges:
-  - 10.0.0.0/20
+  - 0.0.0.0/0
   # Optionally assign a known public LB IP
   # loadBalancerIP: 1.2.3.4
   # Optionally configure a JMX port
@@ -164,16 +165,103 @@ master:
 
   # List of plugins to be install during Jenkins master start
   installPlugins:
-    - kubernetes:1.24.1
-    - workflow-job:2.36
-    - credentials-binding:1.21
-    - bitbucket:latest
-    - google-oauth-plugin:latest
-    - google-source-plugin:latest
-    - google-kubernetes-engine:latest
-    - google-storage-plugin:latest
-    - workflow-aggregator:2.6
-
+      - kubernetes:incrementals;org.csanchez.jenkins.plugins;1.19.1-rc1914.d49d108fa7f7
+      - workflow-job:2.35
+      - workflow-aggregator:2.6
+      - credentials-binding:1.20
+      - active-directory:2.16
+      - matrix-auth:2.5
+      - basic-branch-build-strategies:1.3.2
+      - ace-editor:1.1
+      - analysis-core:1.96
+      - analysis-model-api:7.0.1
+      - ansicolor:0.6.2
+      - ant:1.10
+      - antisamy-markup-formatter:1.6
+      - apache-httpcomponents-client-4-api:4.5.10-2.0
+      - audit-trail:2.5
+      - authentication-tokens:1.3
+      - authorize-project:1.3.0
+      - aws-credentials:1.28
+      - aws-java-sdk:1.11.650
+      - bitbucket:1.1.11
+      - bitbucket-build-status-notifier:1.4.1
+      - blueocean:1.19.0
+      - bouncycastle-api:2.17
+      - branch-api:2.5.4
+      - build-history-metrics-plugin:1.2
+      - build-monitor-plugin:1.12+build.201809061734
+      - build-pipeline-plugin:1.5.8
+      - checkstyle:4.0.0
+      - cloudbees-bitbucket-branch-source:2.5.0
+      - command-launcher:1.3
+      - conditional-buildstep:1.3.6
+      - config-file-provider:3.6.2
+      - confluence-publisher:2.0.3
+      - credentials:2.3.0
+      - cucumber-reports:4.11.0
+      - CustomHistory:1.6
+      - dependency-check-jenkins-plugin:5.0.2
+      - dependency-track:2.1.0
+      - docker-build-step:2.4
+      - email-ext:2.68
+      - embeddable-build-status:2.0.2
+      - external-monitor-job:1.7
+      - favorite:2.3.2
+      - fortify-on-demand-uploader:4.0.1
+      - gatling:1.2.6
+      - git:4.0.0-rc
+      - git-client:3.0.0-rc
+      - google-chat-notification:1.4
+      - google-container-registry-auth:0.3
+      - gradle:1.34
+      - handlebars:1.1.1
+      - hipchat:2.2.1
+      - http_request:1.8.23
+      - jacoco:3.0.4
+      - jira:3.0.10
+      - job-import-plugin:3.3
+      - jobConfigHistory:2.24
+      - jsoup:1.10.3
+      - ldap:1.20
+      - lockable-resources:2.6
+      - mailer:1.29
+      - mapdb-api:1.0.9.0
+      - mercurial:2.8
+      - momentjs:1.1.1
+      - multiple-scms:0.6
+      - nexus-artifact-uploader:2.10
+      - nexus-jenkins-plugin:3.8.20191024-124504.15c0353
+      - oauth-credentials:0.3
+      - pam-auth:1.6
+      - parameterized-trigger:2.35.2
+      - pipeline-aggregator-view:1.8
+      - pipeline-aws:1.38
+      - pipeline-utility-steps:2.3.1
+      - publish-over:0.22
+      - publish-over-ssh:1.20.1
+      - purge-job-history:1.3
+      - rebuild:1.31
+      - role-strategy:2.15
+      - run-condition:1.2
+      - schedule-build:0.5.1
+      - scm-api:2.6.3
+      - scm-sync-configuration:0.0.10
+      - script-security:1.66
+      - secondary-timestamper-plugin:1.1
+      - sonar:2.10
+      - ssh-agent:1.17
+      - ssh-slaves:1.31.0
+      - stashNotifier:1.20
+      - statusmonitor:1.3
+      - structs:1.20
+      - systemloadaverage-monitor:1.2
+      - trilead-api:1.0.5
+      - warnings:5.0.1
+      - warnings-ng:7.1.0
+      - websocket:1.0.6
+      - windows-slaves:1.5
+      - configuration-as-code:1.32
   # Enable to always override the installed plugins with the values of 'master.installPlugins' on upgrade or redeployment.
   # overwritePlugins: true
   # Enable HTML parsing using OWASP Markup Formatter Plugin (antisamy-markup-formatter), useful with ghprb plugin.
@@ -207,12 +295,15 @@ master:
   # etc.  Best reference is https://<jenkins_url>/configuration-as-code/reference.  The example below creates a welcome message:
   JCasC:
     enabled: false
-    defaultConfig: false
-    pluginVersion: "1.36"
+    pluginVersion: "1.32"
+    # it's only used when plugin version is <=1.18 for later version the
+    # configuration as code support plugin is no longer needed
+    supportPluginVersion: "1.18"
     configScripts:
       welcome-message: |
-       jenkins:
-         systemMessage: Welcome to our Aktana CI Jenkins server
+        jenkins:
+            systemMessage: Welcome to the Aktana CI Jenkins server.
+
   # Optionally specify additional init-containers
   customInitContainers: []
   # - name: custom-init
@@ -223,10 +314,11 @@ master:
   sidecars:
     configAutoReload:
       # If enabled: true, Jenkins Configuration as Code will be reloaded on-the-fly without a reboot.  If false or not-specified,
-      # jcasc changes will cause a reboot and will only be applied at the subsequent start-up.  Auto-reload uses the
-      # http://<jenkins_url>/reload-configuration-as-code endpoint to reapply config when changes to the configScripts are detected.
+      # jcasc changes will cause a reboot and will only be applied at the subsequent start-up.  Auto-reload uses the Jenkins CLI
+      # over SSH to reapply config when changes to the configScripts are detected.  The admin user (or account you specify in
+      # master.adminUser) will have a random SSH private key (RSA 4096) assigned unless you specify adminSshKey.  This will be saved to a k8s secret.
       enabled: false
-      image: kiwigrid/k8s-sidecar:0.1.20
+      image: shadwell/k8s-sidecar:0.0.2
       imagePullPolicy: IfNotPresent
       resources:
         #   limits:
@@ -235,6 +327,11 @@ master:
         #   requests:
         #     cpu: 50m
         #     memory: 50Mi
+      # SSH port value can be set to any unused TCP port.  The default, 1044, is a non-standard SSH port that has been chosen at random.
+      # Is only used to reload jcasc config from the sidecar container running in the Jenkins master pod.
+      # This TCP port will not be open in the pod (unless you specifically configure this), so Jenkins will not be
+      # accessible via SSH from outside of the pod.  Note if you use non-root pod privileges (runAsUser & fsGroup),
+      # this must be > 1024:
       sshTcpPort: 1044
       # folder in the pod that should hold the collected dashboards:
       folder: "/var/jenkins_home/casc_configs"
@@ -244,7 +341,7 @@ master:
       # searchNamespace:
 
     # Allows you to inject additional/other sidecars
-    other: []
+    other:
     ## The example below runs the client for https://smee.io as sidecar container next to Jenkins,
     ## that allows to trigger build behind a secure firewall.
     ## https://jenkins.io/blog/2019/01/07/webhook-firewalls/#triggering-builds-with-webhooks-behind-a-secure-firewall
@@ -264,16 +361,11 @@ master:
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
   nodeSelector: {}
-
-  terminationGracePeriodSeconds:
-
   tolerations: []
   # Leverage a priorityClass to ensure your pods survive resource shortages
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
   # priorityClass: system-cluster-critical
   podAnnotations: {}
-  # Add deployment annotation
-  deploymentAnnotations: {}
 
   # The below two configuration-related values are deprecated and replaced by Jenkins Configuration as Code (see above
   # JCasC key).  They will be deleted in an upcoming version.
@@ -290,13 +382,13 @@ master:
   overwriteJobs: false
 
   ingress:
-    enabled: true
+    enabled: false
     # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
     apiVersion: "extensions/v1beta1"
     labels: {}
     annotations: {}
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
     # Set this path to jenkinsUriPrefix above or use annotations to rewrite path
     # path: "/jenkins"
     # configures the hostname e.g. jenkins.example.com
@@ -309,10 +401,10 @@ master:
   # If you're running on GKE and need to configure a backendconfig
   # to finish ingress setup, use the following values.
   # Docs: https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
-  BackendConfig:
+  backendconfig:
     enabled: false
-    apiVersion: "cloud.google.com/v1beta1"
-    name: jenkins-ci-backend
+    apiVersion: "extensions/v1beta1"
+    name:
     labels: {}
     annotations: {}
     spec: {}
@@ -343,8 +435,6 @@ master:
     enabled: false
     # Additional labels to add to the ServiceMonitor object
     serviceMonitorAdditionalLabels: {}
-    # Set a custom namespace where to deploy ServiceMonitor resource
-    # serviceMonitorNamespace: monitoring
     scrapeInterval: 60s
     # This is the default endpoint used by the prometheus plugin
     scrapeEndpoint: /prometheus
@@ -354,9 +444,6 @@ master:
     # See here: https://prometheus.io/docs/prometheus/latest/configuration/alerting_rules/
     # The `groups` root object is added by default, simply add the rule entries
     alertingrules: []
-
-  # Can be used to disable rendering master test resources when using helm template
-  testEnabled: true
 
 agent:
   enabled: true
@@ -369,25 +456,25 @@ agent:
   privileged: false
   resources:
     requests:
-      cpu: "500m"
+      cpu: "200m"
       memory: "256Mi"
     limits:
-      cpu: "1"
-      memory: "512Mi"
+      cpu: "200m"
+      memory: "256Mi"
   # You may want to change this to true while testing a new image
   alwaysPullImage: false
-  # Controls how agent pods are retained after the Jenkins build completes
+  # Controls how slave pods are retained after the Jenkins build completes
   # Possible values: Always, Never, OnFailure
   podRetention: "Never"
   # You can define the volumes that you want to mount for this container
   # Allowed types are: ConfigMap, EmptyDir, HostPath, Nfs, Pod, Secret
   # Configure the attributes as they appear in the corresponding Java class for that type
   # https://github.com/jenkinsci/kubernetes-plugin/tree/master/src/main/java/org/csanchez/jenkins/plugins/kubernetes/volumes
-  # Pod-wide ennvironment, these vars are visible to any container in the agent pod
-  envVars: []
+  # Pod-wide ennvironment, these vars are visible to any container in the slave pod
+  envVars:
   # - name: PATH
   #   value: /usr/local/bin
-  volumes: []
+  volumes:
   # - type: Secret
   #   secretName: mysecret
   #   mountPath: /var/myapp/mysecret
@@ -415,7 +502,7 @@ agent:
   # Raw yaml template for the Pod. For example this allows usage of toleration for agent pods.
   # https://github.com/jenkinsci/kubernetes-plugin#using-yaml-to-define-pod-templates
   # https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
-  yamlTemplate: ""
+  yamlTemplate:
   # yamlTemplate: |-
   #   apiVersion: v1
   #   kind: Pod
@@ -424,8 +511,6 @@ agent:
   #     - key: "key"
   #       operator: "Equal"
   #       value: "value"
-  # Timeout in seconds for an agent to be online
-  slaveConnectTimeout: 100
 
 persistence:
   enabled: true
@@ -462,12 +547,11 @@ networkPolicy:
 ## Install Default RBAC roles and bindings
 rbac:
   create: true
-  readSecrets: false
 
+# Service account for Jenkins
 serviceAccount:
   create: true
-  # The name of the service account is autogenerated by default
-  name: svc-jenkins-ci
+  name: svc-jenkins
   annotations: {}
 
 serviceAccountAgent:
@@ -479,7 +563,7 @@ serviceAccountAgent:
   annotations: {}
 
 ## Backup cronjob configuration
-## Ref: https://github.com/maorfr/kube-tasks
+## Ref: https://github.com/nuvo/kube-tasks
 backup:
   # Backup must use RBAC
   # So by enabling backup you are enabling RBAC specific for backup
@@ -510,8 +594,8 @@ backup:
   # Add additional environment variables
   env:
   # Example environment variable required for AWS credentials chain
-#  - name: "AWS_REGION"
-#    value: "us-east-1"
+  - name: "AWS_REGION"
+    value: "us-east-1"
   resources:
     requests:
       memory: 1Gi
