--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -508,20 +508,20 @@ backup:
    # jenkinsgcp:
   ## Use this key for GCP credentials
      # gcpcredentials: credentials.json
-  env: []
-  # Example environment variable required for AWS credentials chain
-  - name: "AWS_REGION"
-    value: "us-east-1"
-  resources:
-    requests:
-      memory: 1Gi
-      cpu: 1
-    limits:
-      memory: 1Gi
-      cpu: 1
-  # Destination to store the backup artifacts
-  # Supported cloud storage services: AWS S3, Minio S3, Azure Blob Storage, Google Cloud Storage
-  # Additional support can added. Visit this repository for details
-  # Ref: https://github.com/maorfr/skbn
-  destination: "s3://jenkins-data/backup"
-checkDeprecation: true
+  env:
+    # Example environment variable required for AWS credentials chain
+    - name: "AWS_REGION"
+      value: "us-east-1"
+    resources:
+      requests:
+        memory: 1Gi
+        cpu: 1
+      limits:
+        memory: 1Gi
+        cpu: 1
+    # Destination to store the backup artifacts
+    # Supported cloud storage services: AWS S3, Minio S3, Azure Blob Storage
+    # Additional support can added. Visit this repository for details
+    # Ref: https://github.com/nuvo/skbn
+    destination: "s3://nuvo-jenkins-data/backup"
+  checkDeprecation: true
