--- a/jenkins/ingress/ingress_deploy.yaml
+++ b/jenkins/ingress/ingress_deploy.yaml
@@ -21,14 +21,14 @@ spec:
          containerPort: 443
          protocol: TCP
        env:
-       - name: POD_NAME
+       - name: jenkins-ci
          valueFrom:
           fieldRef:
             fieldPath: metadata.name
-       - name: POD_NAMESPACE
+       - name: default
          valueFrom:
            fieldRef:
             fieldPath: metadata.namespace
        args:
         - /nginx-ingress-controller
-        - --default-backend-service=$(POD_NAMESPACE)/nginx-default-backend
+        - --default-backend-service=default/nginx-default-backend
