--- a/jenkins/ingress/ingress_deploy.yaml
+++ b/jenkins/ingress/ingress_deploy.yaml
@@ -1,37 +1,47 @@
-apiVersion: extensions/v1beta1
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: coffee-svc
+spec:
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+    name: http
+  selector:
+    app: coffee
+---
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ingress-nginx
+  name: tea
 spec:
-  replicas: 1
+  replicas: 3
+  selector:
+    matchLabels:
+      app: tea
   template:
-   metadata:
-    labels:
-     app: ingress-nginx
-   spec:
-     containers:
-     - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
-       name: ingress-nginx
-       imagePullPolicy: Always
-       ports:
-       - name: http
-         containerPort: 80
-         protocol: TCP
-       - name: https
-         containerPort: 443
-         protocol: TCP
-       env:
-       - name: jenkins-ci
-         valueFrom:
-          fieldRef:
-            fieldPath: metadata.name
-       - name: default
-         valueFrom:
-           fieldRef:
-            fieldPath: metadata.namespace
-       args:
-        - /nginx-ingress-controller
-        - --default-backend-service=default/nginx-default-backend
-     - backend:
-         serviceName: jenkins-ci
-         servicePort: 8080
+    metadata:
+      labels:
+        app: tea
+    spec:
+      containers:
+      - name: tea
+        image: nginxdemos/nginx-hello:plain-text
+        ports:
+        - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: tea-svc
+  labels:
+spec:
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+    name: http
+  selector:
+    app: tea
