--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -78,7 +78,7 @@ master:
   # jenkinsOpts: ""
   # jenkinsUrl: ""
   # If you set this prefix and use ingress controller then you might want to set the ingress path below
-  jenkinsUriPrefix: "/jenkins"
+  # jenkinsUriPrefix: "/jenkins"
   # Enable pod security context (must be `true` if runAsUser or fsGroup are set)
   usePodSecurityContext: true
   # Set runAsUser to 1000 to let Jenkins run as non-root user 'jenkins' which exists in 'jenkins/jenkins' docker image.
@@ -286,17 +286,17 @@ master:
   overwriteJobs: false
 
   ingress:
-    enabled: true
+    enabled: false
     # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
-    apiVersion: "networking.k8s.io/v1beta1"
+    apiVersion: "extensions/v1beta1"
     labels: {}
     annotations: {}
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
     # Set this path to jenkinsUriPrefix above or use annotations to rewrite path
-    path: "/jenkins"
+    # path: "/jenkins"
     # configures the hostname e.g. jenkins.example.com
-    hostName: jenkins.example.com
+    hostName:
     tls:
     # - secretName: jenkins.cluster.local
     #   hosts:
@@ -306,13 +306,12 @@ master:
   # to finish ingress setup, use the following values.
   # Docs: https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
   backendconfig:
-    enabled: true
+    enabled: false
     apiVersion: "extensions/v1beta1"
-    name: jenkins-ci-bknd
-    labels:
-    annotations:
-    spec:
-
+    name:
+    labels: {}
+    annotations: {}
+    spec: {}
 
   # Openshift route
   route:
