--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -3,16 +3,13 @@ kind: Ingress
 metadata:
   name: jenkins-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, origin, accept
-    nginx.ingress.kubernetes.io/cors-allow-methods: GET, OPTIONS
-    nginx.ingress.kubernetes.io/enable-cors: "true"
+    kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - secretName: tls-secret
   rules:
-  - host: jenkins.sample123.com
-    http:
+  - http:
       paths:
       - backend:
-        serviceName: jenkins-ci
-        servicePort: 8080
+          serviceName: jenkins-ci
+          servicePort: 8080
