--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -1,17 +1,15 @@
 apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: ingress-jenkins
-spec:
-  tls:
-  - hosts:
-    - 10.107.9.143
-    secretName:
-  rules:
-  - host: 10.107.9.143
-    http:
-      paths:
-      - path:
-        backend:
-          serviceName: jenkins-ci
-          servicePort: 8080
+  kind: Ingress
+  metadata:
+    annotations:
+      kubernetes.io/ingress.class: nginx
+    name: nginx-jenkins
+  spec:
+    rules:
+      - host:
+        http:
+          paths:
+            - backend:
+                serviceName: jenkins-ci
+                servicePort: 8080
+              path: /
