--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -1,15 +1,15 @@
 apiVersion: extensions/v1beta1
-  kind: Ingress
-  metadata:
-    annotations:
-      kubernetes.io/ingress.class: nginx
-    name: nginx-jenkins
-  spec:
-    rules:
-      - host: jenkins.example.con
-        http:
-          paths:
-            - backend:
-                serviceName: jenkins-ci
-                servicePort: 8080
-              path: /
+kind: Ingress
+metadata:
+  annotations:
+    kubernetes.io/ingress.class: nginx
+  name: nginx-jenkins
+spec:
+  rules:
+    - host:
+      http:
+        paths:
+          - backend:
+              serviceName: jenkins-ci
+              servicePort: 8080
+            path: /
