test ingress backend

--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -6,7 +6,7 @@ metadata:
   name: nginx-jenkins
 spec:
   rules:
-    - host:
+    - host: jenkins.example.com
       http:
         paths:
           - backend:
