--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -6,10 +6,10 @@ metadata:
   name: nginx-jenkins
 spec:
   rules:
-    - host: jenkins.example.com
+    - host: my.example.com
       http:
         paths:
           - backend:
               serviceName: jenkins-ci
               servicePort: 8080
-            path: /
+            path: /jenkins
