--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -4,12 +4,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
   name: nginx-jenkins
+  namespace: jenkins
 spec:
   rules:
-    - host: my.example.com
+    - host: myproject.cigke.com
       http:
         paths:
           - backend:
               serviceName: jenkins-ci
               servicePort: 8080
-            path: /jenkins
+            path: /
