--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: jenkins
 spec:
   rules:
-    - host: myproject.cigke.com
+    - host: myproject.gke.com
       http:
         paths:
           - backend:
