--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -307,7 +307,7 @@ master:
   # Docs: https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
   backendconfig:
     enabled: true
-    apiVersion: "extensions/v1beta1"
+    apiVersion: "cloud.google.com/v1beta1"
     name: jenkins-ci
     labels: {}
     annotations: {}
