--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -305,9 +305,9 @@ master:
   # If you're running on GKE and need to configure a backendconfig
   # to finish ingress setup, use the following values.
   # Docs: https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
-  backendconfig:
+  Backendconfig:
     enabled: true
-    apiVersion: "cloud.google.com/v1beta1"
+    apiVersion: "extensions/v1beta1"
     name: jenkins-ci
     labels: {}
     annotations: {}
