--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -91,7 +91,7 @@ master:
   targetPort: 8080
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
-  serviceType: ClusterIP
+  serviceType: LoadBalancer
   # Jenkins master service annotations
   serviceAnnotations: {}
   # Jenkins master custom labels
@@ -132,7 +132,7 @@ master:
   # Note if you set this to 'LoadBalancer', you *must* define annotations to secure it. By default
   # this will be an external load balancer and allowing inbound 0.0.0.0/0, a HUGE
   # security risk:  https://github.com/kubernetes/charts/issues/1341
-  slaveListenerServiceType: "ClusterIP"
+  slaveListenerServiceType: LoadBalancer
   # Optionally assign an IP to the LoadBalancer slaveListenerService LoadBalancer
   # GKE users: only regional static IPs will work for Service Load balancer.
   # slaveListenerLoadBalancerIP: 1.2.3.4
@@ -286,17 +286,17 @@ master:
   overwriteJobs: false
 
   ingress:
-    enabled: true
+    enabled: false
     # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
     apiVersion: "extensions/v1beta1"
     labels: {}
     annotations: {}
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # Set this path to jenkinsUriPrefix above or use annotations to rewrite path
     # path: "/jenkins"
     # configures the hostname e.g. jenkins.example.com
-    hostName: cj.aktanainc.app
+    hostName:
     tls:
     # - secretName: jenkins.cluster.local
     #   hosts:
@@ -305,21 +305,13 @@ master:
   # If you're running on GKE and need to configure a backendconfig
   # to finish ingress setup, use the following values.
   # Docs: https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
-  Backendconfig:
-    enabled: true
+  backendconfig:
+    enabled: false
     apiVersion: "extensions/v1beta1"
-    name: jenkins-ci
+    name:
     labels: {}
     annotations: {}
-    spec:
-      rules:
-        - host: cj.aktanainc.app
-          http:
-            paths:
-              - backend:
-                  serviceName: jenkins-ci
-                  servicePort: 80
-                path: /
+    spec: {}
 
   # Openshift route
   route:
