--- a/jenkins/ingress/ingress_deploy.yaml
+++ b/jenkins/ingress/ingress_deploy.yaml
@@ -19,8 +19,7 @@ controller:
   logLevel: 1
 
   ## A list of custom ports to expose on the NGINX ingress controller pod. Follows the conventional Kubernetes yaml syntax for container ports.
-  customPorts:
-    port: 8080
+  customPorts: []
 
   image:
     ## The image repository of the Ingress controller.
