test ingress backend

--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -12,5 +12,5 @@ spec:
         paths:
           - backend:
               serviceName: jenkins-ci
-              servicePort: 8080
-            path: /
+              servicePort: 80
+            path:
