added jenkins master labels

--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -22,7 +22,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.global-static-ip-name: jenkins-ci-ip
   labels:
-    app: jenkins-ci
+    app.kubernetes.io/name : jenkins
+    app.kubernetes.io/component : jenkins-master
 spec:
   backend:
     serviceName: jenkins-backend
@@ -33,7 +34,8 @@ kind: Service
 metadata:
   name: jenkins-backend
   labels:
-    app: jenkins-ci
+    app.kubernetes.io/name : jenkins
+    app.kubernetes.io/component : jenkins-master
 spec:
   type: NodePort
   selector:
