changed to cluster iP

--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -28,7 +28,7 @@ metadata:
 spec:
   - http:
       paths:
-        - path:
+        - path: /
           backend:
             serviceName: jenkins-backend
             servicePort: 8080
