--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -310,9 +310,9 @@ master:
   # to finish ingress setup, use the following values.
   # Docs: https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
   backendconfig:
-    enabled: false
+    enabled: true
     apiVersion: "extensions/v1beta1"
-    name:
+    name: jenkins-backend
     labels: {}
     annotations: {}
     spec: {}
