changed to cluster iP

--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -92,7 +92,7 @@ master:
   targetPort: 8081
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
-  serviceType: ClusterIP
+  serviceType: LoadBalancer
   # Jenkins master service annotations
   serviceAnnotations: {}
   # Jenkins master custom labels
@@ -117,7 +117,7 @@ master:
   healthProbeReadinessFailureThreshold: 3
   healthProbeLivenessInitialDelay: 90
   healthProbeReadinessInitialDelay: 60
-  slaveListenerPort: 50000
+  slaveListenerPort: 30000
   slaveHostPort:
   disabledAgentProtocols:
     - JNLP-connect
@@ -134,7 +134,7 @@ master:
   # this will be an external load balancer and allowing inbound 0.0.0.0/0, a HUGE
   # security risk:  https://github.com/kubernetes/charts/issues/1341
 #  loadBalancerIP: 35.230.72.55
-  slaveListenerServiceType: ClusterIP
+  slaveListenerServiceType: LoadBalancer
   # Optionally assign an IP to the LoadBalancer slaveListenerService LoadBalancer
   # GKE users: only regional static IPs will work for Service Load balancer.
 #  slaveListenerLoadBalancerIP: 35.230.72.55
@@ -172,6 +172,7 @@ master:
     - workflow-aggregator:2.6
     - credentials-binding:1.21
     - git:4.2.0
+    - prometheus:latest
 
   # Enable to always override the installed plugins with the values of 'master.installPlugins' on upgrade or redeployment.
   # overwritePlugins: true
@@ -287,65 +288,16 @@ master:
   # the jenkins jobs configuration with the contents of Jobs every time the pod starts.
   overwriteJobs: false
 
-  ingress:
-    enabled: true
-    # For Kubernetes v1.14+, use 'networking.k8s.io/v1beta1'
-    apiVersion: "extensions/v1beta1"
-    labels: {}
-    annotations:
-      kubernetes.io/ingress.class: "nginx"
-      kubernetes.io/ingress.allow-http: "false"
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-    # Set this path to jenkinsUriPrefix above or use annotations to rewrite path
-    # path: "/jenkins"
-    # configures the hostname e.g. jenkins.example.com
-    hostName: "nukaraju.dev"
-    tls:
-       - secretName: jenkins-ingress-ssl
-         hosts:
-           - nukaraju.dev
-
-  # If you're running on GKE and need to configure a backendconfig
-  # to finish ingress setup, use the following values.
-  # Docs: https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
-  backendconfig:
-    enabled: false
-    apiVersion: "extensions/v1beta1"
-    name:
-    labels: {}
-    annotations: {}
-    spec: {}
-
-  # Openshift route
-  route:
-    enabled: false
-    labels: {}
-    annotations: {}
-    # path: "/jenkins"
-
-  additionalConfig: {}
-
-  # master.hostAliases allows for adding entries to Pod /etc/hosts:
-  # https://kubernetes.io/docs/concepts/services-networking/add-entries-to-pod-etc-hosts-with-host-aliases/
-  hostAliases: []
-  # - ip: 192.168.50.50
-  #   hostnames:
-  #     - something.local
-  # - ip: 10.0.50.50
-  #   hostnames:
-  #     - other.local
-
   # Expose Prometheus metrics
   prometheus:
     # If enabled, add the prometheus plugin to the list of plugins to install
     # https://plugins.jenkins.io/prometheus
     enabled: false
     # Additional labels to add to the ServiceMonitor object
-    serviceMonitorAdditionalLabels: {}
+    serviceMonitorAdditionalLabels:
     # Set a custom namespace where to deploy ServiceMonitor resource
-    # serviceMonitorNamespace: monitoring
-    scrapeInterval: 60s
+    serviceMonitorNamespace: jenkins
+    scrapeInterval: 120s
     # This is the default endpoint used by the prometheus plugin
     scrapeEndpoint: /prometheus
     # Additional labels to add to the PrometheusRule object
@@ -361,7 +313,7 @@ master:
 agent:
   enabled: true
   image: "jenkins/jnlp-slave"
-  tag: "3.27-1"
+  tag: "4.3-1"
   customJenkinsLabels: []
   # name of the secret to be used for image pulling
   persistence:
